--- a/about.html
+++ b/about.html
@@ -55,17 +55,18 @@
           <h2>About Us</h2>
         </div>
         <div class="about_grid">
-          <div class="card_about" style="width: 40rem">
-            <img src="images\Sample3.jpg" class="card-img-top" alt="..." />
+          <div class="card_about">
+            <img src="images/Sample3.jpg" class="card-img-top" alt="..." />
           </div>
           <div class="about_info">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis
-            fugit voluptates expedita quas, cumque quaerat cum cupiditate ut ab
-            officiis fuga, odio vitae? Omnis, dolores id. Vitae architecto ullam
-            laborum!
+            At Watch Shop, we are passionate about timepieces that blend timeless elegance with modern design. 
+      Our mission is to offer a curated collection of high-quality watches that cater to all tastes and preferences, 
+      from luxury brands to everyday wear. We believe a watch is more than just a way to tell time; it’s an extension 
+      of your personality and style.
           </div>
         </div>
       </section>
+      
     </main>
 
     <!-- footer section -->
@@ -75,10 +76,11 @@
           <div>
             <h4>About</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
-              ratione ipsa, asperiores officia corporis ab, cumque cum voluptate
-              deserunt dolorem in nihil inventore consequuntur tempora tenetur.
-              Doloribus modi atque harum.
+              Watch Shop is your trusted destination for premium timepieces,
+              offering a curated selection of luxury, classic, and modern
+              watches. Our passion for craftsmanship and innovation drives us to
+              deliver only the best to watch enthusiasts around the world.
+              Discover the perfect watch that complements your style.
             </p>
           </div>
           <div>
