--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>WatchShop</title>
     <link rel="stylesheet" href="css\index.css" />
     <!-- bootstrap link -->
     <link
@@ -143,14 +143,16 @@
           <h2>About Us</h2>
         </div>
         <div class="about_grid">
-          <div class="card_about" style="width: 40rem">
-            <img src="images\Sample3.jpg" class="card-img-top" alt="..." />
+          <div class="card_about">
+            <img src="images/Sample3.jpg" class="card-img-top" alt="..." />
           </div>
           <div class="about_info">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis
-            fugit voluptates expedita quas, cumque quaerat cum cupiditate ut ab
-            officiis fuga, odio vitae? Omnis, dolores id. Vitae architecto ullam
-            laborum!
+            At Watch Shop, we are passionate about timepieces that blend
+            timeless elegance with modern design. Our mission is to offer a
+            curated collection of high-quality watches that cater to all tastes
+            and preferences, from luxury brands to everyday wear. We believe a
+            watch is more than just a way to tell time; it’s an extension of
+            your personality and style.
           </div>
         </div>
       </section>
@@ -163,17 +165,25 @@
         <div class="upload_grid">
           <div class="upload_details">
             <form id="watch-form">
-              <input type="text" name="name" placeholder="Watch Name" required />
-              <input type="text" name="brand" placeholder="Watch Brand" required />
+              <input
+                type="text"
+                name="name"
+                placeholder="Watch Name"
+                required
+              />
+              <input
+                type="text"
+                name="brand"
+                placeholder="Watch Brand"
+                required
+              />
               <input type="number" name="price" placeholder="Price" required />
               <input type="file" name="image" required />
-              <button type="submit" class="btn btn-primary" style="text-align: center">
-                Submit
-              </button>
+              <button type="submit" class="btn btn-primary">Submit</button>
             </form>
           </div>
-          <div class="card_upload" style="width: 40rem">
-            <img src="images\Sample3.jpg" class="card-img-top" alt="..." />
+          <div class="card_upload">
+            <img src="images/Sample3.jpg" class="card-img-top" alt="..." />
           </div>
         </div>
       </section>
@@ -186,10 +196,11 @@
           <div>
             <h4>About</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
-              ratione ipsa, asperiores officia corporis ab, cumque cum voluptate
-              deserunt dolorem in nihil inventore consequuntur tempora tenetur.
-              Doloribus modi atque harum.
+              Watch Shop is your trusted destination for premium timepieces,
+              offering a curated selection of luxury, classic, and modern
+              watches. Our passion for craftsmanship and innovation drives us to
+              deliver only the best to watch enthusiasts around the world.
+              Discover the perfect watch that complements your style.
             </p>
           </div>
           <div>
