--- a/watches.html
+++ b/watches.html
@@ -71,10 +71,11 @@
           <div>
             <h4>About</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
-              ratione ipsa, asperiores officia corporis ab, cumque cum voluptate
-              deserunt dolorem in nihil inventore consequuntur tempora tenetur.
-              Doloribus modi atque harum.
+              Watch Shop is your trusted destination for premium timepieces,
+              offering a curated selection of luxury, classic, and modern
+              watches. Our passion for craftsmanship and innovation drives us to
+              deliver only the best to watch enthusiasts around the world.
+              Discover the perfect watch that complements your style.
             </p>
           </div>
           <div>
