--- a/uplaod.html
+++ b/uplaod.html
@@ -73,17 +73,11 @@
               />
               <input type="number" name="price" placeholder="Price" required />
               <input type="file" name="image" required />
-              <button
-                type="submit"
-                class="btn btn-primary"
-                style="text-align: center"
-              >
-                Submit
-              </button>
+              <button type="submit" class="btn btn-primary">Submit</button>
             </form>
           </div>
-          <div class="card_upload" style="width: 40rem">
-            <img src="images\Sample3.jpg" class="card-img-top" alt="..." />
+          <div class="card_upload">
+            <img src="images/Sample3.jpg" class="card-img-top" alt="..." />
           </div>
         </div>
       </section>
@@ -96,10 +90,11 @@
           <div>
             <h4>About</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
-              ratione ipsa, asperiores officia corporis ab, cumque cum voluptate
-              deserunt dolorem in nihil inventore consequuntur tempora tenetur.
-              Doloribus modi atque harum.
+              Watch Shop is your trusted destination for premium timepieces,
+              offering a curated selection of luxury, classic, and modern
+              watches. Our passion for craftsmanship and innovation drives us to
+              deliver only the best to watch enthusiasts around the world.
+              Discover the perfect watch that complements your style.
             </p>
           </div>
           <div>
