--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <section>
         <div>
           <div class="featured">
-            <h2>Featured Watches</h2>
+            <h2 style="color: white;">Featured Watches</h2>
           </div>
           <div class="watches-container" id="watches-container"></div>
           <div class="view_more">
@@ -211,8 +211,7 @@
         </div>
         <div class="footer-info">
           <p>
-            &copy; <span id="displayYear"></span> All Rights Reserved By
-            <a href="https://html.design/">Watch Shop</a>
+            &copy; <span id="displayYear"></span> All Rights Reserved By Watch Shop
           </p>
         </div>
       </div>
