--- a/watches.html
+++ b/watches.html
@@ -58,7 +58,7 @@
       <section>
         <div>
           <div class="featured" id="watch-form">
-            <h2>Featured Watches</h2>
+            <h2 style="color: white;">Featured Watches</h2>
           </div>
           <div class="watches-container" id="watches-container"></div>
         </div>
